# core_of_color

./: .gitignore  Cargo.toml  README.md  build_web.sh  setup_web.sh  start_server.sh
docs/: core_of_color.js  core_of_color_bg.wasm  index.html  manifest.json  sw.js
src/: app.rs  lib.rs  main.rs
src/state/: mod.rs  space.rs
