[package]
name = "core_of_color"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hecs = "0.6"
glam = "0.18"
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
colorsys = "0.6"
bumpalo = { version = "3.7", features = ["collections", "boxed"] }
float-ord = "0.3"

eframe = { version = "0.14", features = ["time"] }

# serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []

# persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
